Fix capabilities and more porting